--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "candlesticks for acharts",
   "keywords": [],
   "homepage": "",
-  "author": "祯逸 <zhenyi.szy@alibaba-inc.com>",
+  "author": "shizy.shi@gmail.com",
   "repository": {
     "type": "git",
     "url": ""
